fixing images on ios

--- a/src/style/css/reg-log.css
+++ b/src/style/css/reg-log.css
@@ -754,7 +754,7 @@ html.dark {
 .films-image-section a img {
   height: 100%;
   max-width: 100%;
-  max-height: 20rem;
+  max-height: 18rem;
   border-radius: 0.2rem;
   object-fit: cover;
   filter: brightness(90%);
