--- a/src/style/scss/home-components/_films-categories.scss
+++ b/src/style/scss/home-components/_films-categories.scss
@@ -31,7 +31,7 @@
     img {
       height: 100%;
 			max-width: 100%;
-			max-height: 20rem;
+			max-height: 18rem;
       border-radius: 0.2rem;
       object-fit: cover;
       filter: brightness(90%);
